@@ -21,7 +21,6 @@ SOURCES = monapi_impl.cpp \
           Message.cpp \
           MonaApplication.cpp \
           Mutex.cpp \
-          Condition.cpp \
           Observable.cpp \
           Random.cpp \
           Screen.cpp \
