@@ -3,6 +3,7 @@
 
 #include <sys/types.h>
 #include <sys/error.h>
+#include <monapi/syscall.h>
 
 namespace MonAPI {
 
@@ -22,7 +23,10 @@ public:
 
          A mutex.
     */
-    Mutex();
+    Mutex() : destroyed_(false), mutexId_(syscall_mutex_create())
+    {
+    }
+
 
     /*
        function: Mutex
@@ -38,14 +42,23 @@ public:
 
          A mutex.
     */
-    Mutex(intptr_t id);
+    Mutex(intptr_t id) : destroyed_(false), mutexId_(syscall_mutex_fetch(id))
+    {
+    }
+
 
     /*
        function: ~Mutex
 
        Destroy the mutex.
     */
-    ~Mutex();
+    ~Mutex()
+    {
+        if (!destroyed_) {
+            destroy();
+        }
+    }
+
 
     /*
        function: lock
@@ -55,7 +68,11 @@ public:
        Returns:
          Returns <M_OK> if the mutex is successfully locked, or <M_BAD_MUTEX_ID> if mutex is invalid.
     */
-    intptr_t lock();
+    intptr_t lock()
+    {
+        return syscall_mutex_lock(mutexId_);
+    }
+
 
     /*
        function: lock
@@ -70,7 +87,11 @@ public:
          <M_OK>, when the thread gets a lock. <M_TIMED_OUT>, when timeout. <M_BAD_MUTEX_ID> if mutex is invalid.
 
     */
-    intptr_t lock(intptr_t timeoutMsec);
+    intptr_t lock(intptr_t timeoutMsec)
+    {
+        return syscall_mutex_lock_timeout(mutexId_, timeoutMsec);
+    }
+
 
     /*
        function: unlock
@@ -82,7 +103,10 @@ public:
        Returns:
          Returns <M_OK> if the mutex is successfully unlocked, or <M_BAD_MUTEX_ID> if mutex is invalid.
     */
-    intptr_t unlock();
+    intptr_t unlock()
+    {
+        return syscall_mutex_unlock(mutexId_);
+    }
 
 
     /*
@@ -94,7 +118,11 @@ public:
          Returns <M_OK> if the mutex is successfully locked. <M_BUSY> if the mutex is locked by other process. <M_BAD_MUTEX_ID> if mutex is invalid.
 
     */
-    intptr_t tryLock();
+    intptr_t tryLock()
+    {
+        return syscall_mutex_try_lock(mutexId_);
+    }
+
 
     /*
        function: destroy
@@ -105,6 +133,7 @@ public:
          Returns <M_OK> if the mutex is successfully destoryed, or <M_BAD_MUTEX_ID> if mutexid is invalid.
     */
     intptr_t destroy();
+
 
     /*
        function: getId
@@ -118,8 +147,8 @@ public:
     }
 
 private:
-    intptr_t mutexId_;
     bool destroyed_;
+    intptr_t mutexId_;
 };
 
 };
